<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CreateVideoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/subtract"
        android:paddingBottom="15dp"
        app:layout_constraintHeight_percent="0.11"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btn_back_my_channel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_name_channel_activity"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_name_channel_activity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/upload_video"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.7" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_video_file"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3"
            tools:layout_editor_absoluteX="15dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_name_file"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.18"
                android:text="@string/only_support_video_under_200mb"
                android:textColor="@color/non_gray"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_choose_file_video"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.82"
                android:backgroundTint="@color/blue"
                android:text="@string/choose_file"
                android:textAllCaps="false"
                android:textColor="@color/yellow"
                android:textSize="11sp"
                app:cornerRadius="20dp" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_video_image"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintHeight_percent="0.09"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView10"
            tools:layout_editor_absoluteX="15dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_name_image_file"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.18"
                android:text="@string/only_support_video_under_2mb"
                android:textColor="@color/non_gray"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_choose_file_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.82"
                android:backgroundTint="@color/blue"
                android:text="@string/choose_file"
                android:textAllCaps="false"
                android:textColor="@color/yellow"
                android:textSize="11sp"
                app:cornerRadius="20dp" />
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_infomation"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout10" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:hintTextColor="@color/black"
            android:hint="@string/enter_video_title"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/gray"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:boxStrokeWidth="1dp"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView4"
            tools:layout_editor_absoluteX="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_video_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="50"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_video_description"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/gray"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:counterEnabled="true"
            app:counterMaxLength="200"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:layout_editor_absoluteX="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_video_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="200"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_category"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleInputLayout" />

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_spinner_outline"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="25dp"
            android:popupBackground="@color/white"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView5"/>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_category">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_uploading_you_agree_to" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_of_uploader_earnings_program"
                android:textColor="@color/blue_3" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload_video"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/upload"
            android:backgroundTint="@color/blue"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            android:textColor="@color/yellow"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>